feat : Creasion de funcionalida Registro de Decanos CRUD con todos sus criterios de aceptacion  realizados y completados